# WebProject

./: .gitignore  README.md  db.sqlite3  pyproject.toml
MyProject/: asgi.py  settings.py  urls.py  wsgi.py
Templates/: Game_list.html  base.html  game.html  game_list.html  home.html  login.html  perfil.html  register.html
Templates/partials/: base.html  edit_review.html  game_card.html  navbar.html  partial_list.html  review_form.html  reviews_list.html
features/: enviroment.py  environment.py  post_review.feature  reviews.feature
features/steps/: post_reviews_steps.py  review_steps.py
static/css/: form.css  form_altheader.css  genres.css  header.css  login.css  noticias.css  pagination.css  pagination2.css  register.css  reviews.css  styles.css
static/js/: gameList.js  load_games.js  script.js
web/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
web/management/commands/: importar_juegos_igbd.py
web/migrations/: 0001_initial.py  0002_remove_review_descripcion_review_texto.py  0003_alter_customuser_avatar.py  0004_alter_review_fecha_review.py  0005_alter_review_rating.py
web/static/: style.css
