[project]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "David Sarrat González",email = "113605621+davidsarratgonzalez@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "numpy (==2.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
