[project]
name = "WebProyect"
version = "0.1.0"
description = ""
authors = [
    {name = "Bogdan2005-19",email = "stefbogdanicolae@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "requests (==2.32.3)",
    "django-bootstrap5 (==25.1)",
    "django-crispy-forms (==2.3)",
    "django-imagekit (==5.0.0)",
    "crispy-bootstrap5 (==2025.4)",
    "pillow (==11.2.1)",
    "network (>=0.1,<0.2)",
    "behave (==1.2.6)",
    "splinter (==0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
